<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fechalabel"
            android:textSize="10pt"
            android:layout_marginBottom="20dp"></TextView>

        <EditText
            android:id="@+id/EditTextFecha"
            android:layout_width="402dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/Fecha"
            android:inputType="number|numberDecimal"></EditText>
        <TextView
            android:id="@+id/TextViewMonto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montolabel"
            android:textSize="10pt"
            android:layout_marginBottom="20dp"></TextView>

        <EditText
            android:id="@+id/EditTextMonto"
            android:layout_width="402dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/montovalue"
            android:inputType="number|numberDecimal"></EditText>
        <TextView
        android:id="@+id/TextCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCategorias"
        android:textSize="10pt"
        android:layout_marginBottom="20dp"></TextView>
        <Spinner
            android:id="@+id/SpinnerCategorias"
            android:layout_height="wrap_content"

            android:layout_width="fill_parent"
            android:layout_marginBottom="40dp"
            >
        </Spinner>
        <TextView
            android:id="@+id/TexttipoCta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labeltipoCuenta"
            android:textSize="10pt"
            android:layout_marginBottom="20dp"></TextView>
        <Spinner
            android:id="@+id/SpinnerCuentas"
            android:layout_height="wrap_content"

            android:layout_width="fill_parent"
            android:layout_marginBottom="40dp"
            >
        </Spinner>

        <Button
            android:id="@+id/ButtonSendTransaction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarUsuario"
            android:text="@string/transactionbutton"></Button>

    </LinearLayout>
</ScrollView>